--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,9 @@ a {
     border: 0px solid rgba(0, 0, 0, 0);
     margin: 20px;
 }
+#button1 {
+    margin-left: 80px;
+}
 .buttonText {
     color: rgba(255, 255, 255, 0.8);
     font-size: 20px;
