--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 body {
     background-image: url("../images/header_bg.jpg");
     background-color: black;
@@ -60,4 +64,10 @@ a {
     color: rgba(255, 255, 255, 0.8);
     font-size: 20px;
     font-family: 'Roboto', sans-serif;  
+}
+nav {
+    background-color:white;
+}
+.menu {
+    background-color: grey;
 }
