--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
     background-image: url("../images/header_bg.jpg");
     background-color: black;
 }
-img {
+#logo {
     display: block;
     margin: 275px auto 0px auto;
     width: 25%;
@@ -58,7 +58,7 @@ a {
     margin: 20px;
 }
 #button1 {
-    margin-left: 80px;
+    margin-left: 140px;
 }
 .buttonText {
     color: rgba(255, 255, 255, 0.8);
@@ -66,8 +66,25 @@ a {
     font-family: 'Roboto', sans-serif;  
 }
 nav {
-    background-color:white;
+    background-color:white; 
+    position: fixed;
+    top: 0px;
+    width: 100%;
 }
 .menu {
+    float: right;
     background-color: grey;
+    width: 55px;
+    height: 55px;
+}
+pre{
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;  
+}
+.name  {
+    color: white;
+    margin-top: 275px;
+    font-family: 'Roboto', sans-serif;  
+    font-size: 80px
 }
